{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 82,
  "lineage": "58d0d36e-dad0-638a-63a6-e062800637e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c94b4bf26c5aac0b",
            "arn": "arn:aws:ec2:us-east-1:477413570762:elastic-ip/eipalloc-0c94b4bf26c5aac0b",
            "association_id": "eipassoc-0775a381b6de6fb45",
            "domain": "vpc",
            "id": "eipalloc-0c94b4bf26c5aac0b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07553c3735108a67b",
            "private_dns": "ip-10-0-0-164.ec2.internal",
            "private_ip": "10.0.0.164",
            "public_dns": "ec2-34-200-132-197.compute-1.amazonaws.com",
            "public_ip": "34.200.132.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:477413570762:instance/i-04a02df584072a790",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a02df584072a790",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d94223c48338ba90",
            "private_dns": "ip-10-0-0-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ac098f1cbd26207b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c40a35ee434b036e",
            "tags": {
              "Name": "Sandbox-vm1"
            },
            "tags_all": {
              "Name": "Sandbox-vm1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0153a686d687cf226"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.univpc"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:477413570762:instance/i-0a606a60b043fcf81",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a606a60b043fcf81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a23a1b99c15dc4b5",
            "private_dns": "ip-10-0-0-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e1fd6180f273b19e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c40a35ee434b036e",
            "tags": {
              "Name": "Sandbox-vm2"
            },
            "tags_all": {
              "Name": "Sandbox-vm2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0153a686d687cf226"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "uniigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:internet-gateway/igw-0fef1fceff4060c29",
            "id": "igw-0fef1fceff4060c29",
            "owner_id": "477413570762",
            "tags": {
              "Environment": "Sandbox",
              "Name": "uniVPC",
              "PM": "wokia kumase",
              "Project": "1234"
            },
            "tags_all": {
              "Environment": "Sandbox",
              "Name": "uniVPC",
              "PM": "wokia kumase",
              "Project": "1234"
            },
            "vpc_id": "vpc-0964c2b34ef842e26"
          },
          "dependencies": [
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c94b4bf26c5aac0b",
            "association_id": "eipassoc-0775a381b6de6fb45",
            "connectivity_type": "public",
            "id": "nat-054a77ecf864f318e",
            "network_interface_id": "eni-07553c3735108a67b",
            "private_ip": "10.0.0.164",
            "public_ip": "34.200.132.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c40a35ee434b036e",
            "tags": {
              "Name": "NATGW"
            },
            "tags_all": {
              "Name": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.uniigw",
            "aws_subnet.public",
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:route-table/rtb-075942a6c08e975a0",
            "id": "rtb-075942a6c08e975a0",
            "owner_id": "477413570762",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-054a77ecf864f318e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PriSNRT"
            },
            "tags_all": {
              "Name": "PriSNRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0964c2b34ef842e26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.uniigw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:route-table/rtb-0e715763969b115d0",
            "id": "rtb-0e715763969b115d0",
            "owner_id": "477413570762",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fef1fceff4060c29",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PubSNRT"
            },
            "tags_all": {
              "Name": "PubSNRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0964c2b34ef842e26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.uniigw",
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9c9a1f3ddb72620",
            "route_table_id": "rtb-075942a6c08e975a0",
            "subnet_id": "subnet-02e30c8d17793de8c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.uniigw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0e83ed3f29c321d",
            "route_table_id": "rtb-0e715763969b115d0",
            "subnet_id": "subnet-0c40a35ee434b036e"
          },
          "dependencies": [
            "aws_internet_gateway.uniigw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:subnet/subnet-02e30c8d17793de8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e30c8d17793de8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "477413570762",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet"
            },
            "tags_all": {
              "Name": "Private_Subnet"
            },
            "vpc_id": "vpc-0964c2b34ef842e26"
          },
          "dependencies": [
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:subnet/subnet-0c40a35ee434b036e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c40a35ee434b036e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "477413570762",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet"
            },
            "tags_all": {
              "Name": "Public_Subnet"
            },
            "vpc_id": "vpc-0964c2b34ef842e26"
          },
          "dependencies": [
            "aws_vpc.univpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "univpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:vpc/vpc-0964c2b34ef842e26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098366ef89ec0d22e",
            "default_route_table_id": "rtb-01d82de420d0867c6",
            "default_security_group_id": "sg-0153a686d687cf226",
            "dhcp_options_id": "dopt-00e702c9eb9291e46",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0964c2b34ef842e26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d82de420d0867c6",
            "owner_id": "477413570762",
            "tags": {
              "Environment": "Sandbox",
              "Name": "uniVPC",
              "PM": "wokia kumase",
              "Project": "1234"
            },
            "tags_all": {
              "Environment": "Sandbox",
              "Name": "uniVPC",
              "PM": "wokia kumase",
              "Project": "1234"
            }
          }
        }
      ]
    }
  ]
}